@@ -3028,11 +3028,10 @@ push_class_level_binding_1 (tree name, tree x)
     decl = TREE_VALUE (decl);
 
   if (TREE_CODE (decl) == USING_DECL
-      && TREE_CODE (USING_DECL_SCOPE (decl)) == TEMPLATE_TYPE_PARM
+      && TYPE_NAME (USING_DECL_SCOPE (decl))
       && DECL_NAME (decl) == TYPE_IDENTIFIER (USING_DECL_SCOPE (decl)))
-    /* This using-declaration declares constructors that inherit from the
-       constructors for the template parameter.  It does not redeclare the
-       name of the template parameter.  */
+    /* This using-declaration declares inheriting constructors; it does not
+       redeclare the name of a template parameter.  */
     return true;
 
   if (!check_template_shadow (decl))
@@ -3226,6 +3225,10 @@ do_class_using_decl (tree scope, tree name)
       error ("%<%T::%D%> names destructor", scope, name);
       return NULL_TREE;
     }
+  if (TYPE_NAME (scope) && name == TYPE_IDENTIFIER (scope))
+    /* 3.4.3.1 says that using B::B always names the constructor even if B
+       is a typedef; now replace the second B with the real name.  */
+    name = TYPE_IDENTIFIER (TYPE_MAIN_VARIANT (scope));
   if (MAYBE_CLASS_TYPE_P (scope) && constructor_name_p (name, scope))
     maybe_warn_cpp0x (CPP0X_INHERITING_CTORS);
   if (constructor_name_p (name, current_class_type))
